Spaziature interne completate, mancano colorazioni varie

--- a/index.html
+++ b/index.html
@@ -230,11 +230,11 @@
             <div class="container">
                 <div class="row align-items-end padding_y_m">
                     <div class="col-12 col-lg-4 me-auto">
-                        <img src="img/returnal-hero-banner-logo.png" alt="Returnal logo">
+                        <img class="mb-4" src="img/returnal-hero-banner-logo.png" alt="Returnal logo">
     
                         <section>
-                            <h3>Rompi il cerchio</h3>
-                            <p>Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo
+                            <h3 class="mb-4">Rompi il cerchio</h3>
+                            <p class="mb-4">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo
                                 esplosivo thriller fantascientifico , disponibile in esclusiva su PS5</p>
                             <button class="btn btn-danger rounded-pill">Acquista ora</button>
                         </section>
@@ -289,7 +289,7 @@
         <div class="container text-center padding_y_m">
             <h6 class="text_super text-info">Play has no limits</h6>
 
-            <h3>Ecco la PlayStation 5</h3>
+            <h3 class="mb-4">Ecco la PlayStation 5</h3>
 
             <h6 class="text_subtitle">Tuffati in nuove possibilità di gioco completamente inaspettate</h6>
         </div>
@@ -297,9 +297,9 @@
         <div class="container padding_y_m">
             <div class="row align-items-center">
                 <div class="col-10 col-md-5">
-                    <h3>Console PlayStation 5</h3>
+                    <h3 class="mb-4">Console PlayStation 5</h3>
 
-                    <h6 class="text_subtitle">Sperimenta la nuova generazione di incredibili giochi PlayStation.</h6>
+                    <h6 class="text_subtitle mb-5">Sperimenta la nuova generazione di incredibili giochi PlayStation.</h6>
 
                     <button class="btn btn-info rounded-pill text-white">Maggiori informazioni</button>
                 </div>
@@ -369,11 +369,11 @@
             <div class="row align-items-end">
                 <div class="container">
                     <div class="col-12 col-lg-4 me-auto">
-                        <img src="img/it-takes-two-logo.png" alt="It takes two logo">
+                        <img class="mb-4" src="img/it-takes-two-logo.png" alt="It takes two logo">
     
                         <section>
-                            <h3>Un'avventura cooperativa selvaggia ti attende</h3>
-                            <p>Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two,
+                            <h3 class="mb-4">Un'avventura cooperativa selvaggia ti attende</h3>
+                            <p class="mb-4">Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two,
                                 un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere</p>
                             <button class="btn btn-danger rounded-pill">Acquista ora</button>
                         </section>
@@ -384,7 +384,7 @@
 
         <div class="container-fluid bg-dark padding_y_s">
             <div class="container text-white">
-                <h4>Nuove uscite</h4>
+                <h4 class="mb-4">Nuove uscite</h4>
                 <h5>Giochi incredibili per PS4 e PS5 disponibili ora</h5>
 
                 <div class="row row-cols-2 row-cols-sm-3 row-cols-lg-6 gy-2 padding_y_s">
@@ -524,7 +524,7 @@
         </div>
 
         <div class="container text-center padding_y_l">
-            <h3>Esplora PlayStation 4®</h3>
+            <h3 class="mb-4">Esplora PlayStation 4®</h3>
 
             <h6 class="text_subtitle">Giochi incredibili e intrattenimento senza fine. <br> Non c'è mai stato un momento migliore per
                 giocare sulla tua PS4.</h6>
@@ -538,9 +538,9 @@
                             alt="PlayStation 4 console">
 
                         <div class="card-body">
-                            <h3>PlayStation 4</h3>
+                            <h3 class="mb-3">PlayStation 4</h3>
 
-                            <h6>Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</h6>
+                            <h6 class="mb-4">Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</h6>
 
                             <button class="btn btn-info text-white rounded-pill">Scopri di più</button>
                         </div>
@@ -553,9 +553,9 @@
                             alt="PlayStation 4 console">
 
                         <div class="card-body">
-                            <h3>PlayStation VR</h3>
+                            <h3 class="mb-3">PlayStation VR</h3>
 
-                            <h6>Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</h6>
+                            <h6 class="mb-4">Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</h6>
 
                             <button class="btn btn-info text-white rounded-pill">Scopri di più</button>
                         </div>
@@ -568,9 +568,9 @@
                             alt="PlayStation 4 console">
 
                         <div class="card-body">
-                            <h3>Accessori</h3>
+                            <h3 class="mb-3">Accessori</h3>
 
-                            <h6>Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</h6>
+                            <h6 class="mb-4">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</h6>
 
                             <button class="btn btn-info text-white rounded-pill">Scopri di più</button>
                         </div>
@@ -583,9 +583,9 @@
             <div class="container padding_y_s">
                 <div class="row row-cols-1 row-cols-md-2 align-items-center">
                     <div class="col text-white">
-                        <img class="w-50" src="img/ps-plus-logo.png" alt="PS+ logo">
+                        <img class="w-50 mb-4" src="img/ps-plus-logo.png" alt="PS+ logo">
 
-                        <p>Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili,
+                        <p class="mb-4">Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili,
                             sconti esclusivi e altro ancora.</p>
                         <button class="btn btn-light rounded-pill text-info">Esplora PlayStation Plus</button>
                     </div>
@@ -599,7 +599,7 @@
         </div>
 
         <div class="container text-center padding_y_l">
-            <h3>Nuovi sconti sul PlayStation Store</h3>
+            <h3 class="mb-4">Nuovi sconti sul PlayStation Store</h3>
 
             <h6 class="text_subtitle">Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico
                 posto.</h6>
@@ -625,9 +625,9 @@
             <div class="container padding_y_s">
                 <div class="row row-cols-1 row-cols-md-2 align-items-center">
                     <div class="col text-white">
-                        <img class="w-50" src="img/ps-plus-logo.png" alt="PlayStation Now logo">
+                        <img class="w-50 mb-4" src="img/ps-plus-logo.png" alt="PlayStation Now logo">
 
-                        <p>Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2
+                        <p class="mb-4">Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2
                             su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.</p>
                         <button class="btn btn-light rounded-pill text-info">Esplora PlayStation Now</button>
                     </div>
