--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
         <div class="container playstation_items_container padding_y_s">
             <div class="row row-cols-3 row-cols-md-5 gy-3">
                 <div class="col">
-                    <div class="card text-center border-0 card_active_bottom">
+                    <div class="card text-center border-0 card_active_bottom h-100">
                         <img src="img/playstation-5-thumb.png" class="card-img-top w-75 mx-auto"
                             alt="PlayStation 5 console">
 
@@ -366,17 +366,19 @@
         </div>
 
         <div id="it_takes_two" class="container-fluid padding_y_l">
-            <div class="row align-items-end">
-                <div class="container">
-                    <div class="col-12 col-lg-4 me-auto">
-                        <img class="mb-4" src="img/it-takes-two-logo.png" alt="It takes two logo">
-    
-                        <section>
-                            <h3 class="mb-4">Un'avventura cooperativa selvaggia ti attende</h3>
-                            <p class="mb-4">Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two,
-                                un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere</p>
-                            <button class="btn btn-danger rounded-pill">Acquista ora</button>
-                        </section>
+            <div class="container">
+                <div class="row align-items-end">
+                    <div class="container">
+                        <div class="col-12 col-lg-4 me-auto">
+                            <img class="mb-4" src="img/it-takes-two-logo.png" alt="It takes two logo">
+        
+                            <section>
+                                <h3 class="mb-4">Un'avventura cooperativa selvaggia ti attende</h3>
+                                <p class="mb-4">Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two,
+                                    un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere</p>
+                                <button class="btn btn-danger rounded-pill">Acquista ora</button>
+                            </section>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -621,7 +623,7 @@
             </div>
         </div>
 
-        <div class="container-fluid bg-dark">
+        <div class="container-fluid bg_dark_blue">
             <div class="container padding_y_s">
                 <div class="row row-cols-1 row-cols-md-2 align-items-center">
                     <div class="col text-white">
