--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
 
     <!-- Inizio main -->
     <main>
+        <!-- Inizio sezione Returnal -->
         <div id="returnal" class="container-fluid">
             <div class="container">
                 <div class="row align-items-end padding_y_m">
@@ -242,7 +243,9 @@
                 </div>
             </div>
         </div>
+        <!-- Fine sezione Returnal -->
 
+        <!-- Inizio sezione copertine dei giochi alternate -->
         <div class="container">
             <div class="row row-cols-2 row-cols-sm-3 row-cols-lg-6 justify-content-between padding_y_s gy-3">
                 <div class="col">
@@ -285,7 +288,9 @@
                 </div>
             </div>
         </div>
+        <!-- Fine sezione copertine dei giochi alternate -->
 
+        <!-- Inizio sezione PS5 titoli d'introduzione -->
         <div class="container text-center padding_y_m">
             <h6 class="text_super text-info">Play has no limits</h6>
 
@@ -293,7 +298,9 @@
 
             <h6 class="text_subtitle">Tuffati in nuove possibilità di gioco completamente inaspettate</h6>
         </div>
+        <!-- Inizio sezione PS5 titoli d'introduzione -->
 
+        <!-- Inizio sezione PS5 info e immagine grande -->
         <div class="container padding_y_m">
             <div class="row align-items-center">
                 <div class="col-10 col-md-5">
@@ -309,7 +316,9 @@
                 </div>
             </div>
         </div>
+        <!-- Fine sezione PS5 info e immagine grande -->
 
+        <!-- Inizio sezione PS5 tutti i prodotti -->
         <div class="container playstation_items_container padding_y_s">
             <div class="row row-cols-3 row-cols-md-5 gy-3">
                 <div class="col">
@@ -364,7 +373,9 @@
                 </div>
             </div>
         </div>
+        <!-- Fine sezione PS5 tutti i prodotti -->
 
+        <!-- Inizio sezione It Takes Two -->
         <div id="it_takes_two" class="container-fluid padding_y_l">
             <div class="container">
                 <div class="row align-items-end">
@@ -383,7 +394,9 @@
                 </div>
             </div>
         </div>
+        <!-- Fine sezione It Takes Two -->
 
+        <!-- Inizio sezione nuove uscite PS4 e PS5 -->
         <div class="container-fluid bg-dark padding_y_s">
             <div class="container text-white">
                 <h4 class="mb-4">Nuove uscite</h4>
@@ -524,14 +537,18 @@
                 </div>
             </div>
         </div>
+        <!-- Inizio sezione nuove uscite PS4 e PS5 -->
 
+        <!-- Inizio sezione PS4 titoli -->
         <div class="container text-center padding_y_l">
             <h3 class="mb-4">Esplora PlayStation 4®</h3>
 
             <h6 class="text_subtitle">Giochi incredibili e intrattenimento senza fine. <br> Non c'è mai stato un momento migliore per
                 giocare sulla tua PS4.</h6>
         </div>
+        <!-- Fine sezione PS4 titoli -->
 
+        <!-- Inizio sezione PS4 tutti i prodotti -->
         <div class="container pb-5">
             <div class="row row-cols-1 row-cols-md-3 gy-5">
                 <div class="col">
@@ -580,7 +597,9 @@
                 </div>
             </div>
         </div>
+        <!-- Fine sezione PS4 tutti i prodotti -->
 
+        <!-- Inizio sezione PlayStation Plus -->
         <div class="container-fluid bg-secondary">
             <div class="container padding_y_s">
                 <div class="row row-cols-1 row-cols-md-2 align-items-center">
@@ -599,7 +618,9 @@
                 </div>
             </div>
         </div>
+        <!-- Fine sezione PlayStation Plus -->
 
+        <!-- Inizio sezione sconti PlayStation Store -->
         <div class="container text-center padding_y_l">
             <h3 class="mb-4">Nuovi sconti sul PlayStation Store</h3>
 
@@ -622,7 +643,9 @@
                 </div>
             </div>
         </div>
+        <!-- Fine sezione sconti PlayStation Store -->
 
+        <!-- Inizio sezione PlayStation Now -->
         <div class="container-fluid bg_dark_blue">
             <div class="container padding_y_s">
                 <div class="row row-cols-1 row-cols-md-2 align-items-center">
@@ -641,7 +664,9 @@
                 </div>
             </div>
         </div>
+        <!-- Inizio sezione PlayStation Now -->
 
+        <!-- Inizio sezione social -->
         <div class="container padding_y_m">
             <h4 class="text-center fw-bolder mb-5">Seguici sui social media</h4>
 
@@ -667,8 +692,7 @@
                 </div>
             </div>
         </div>
-
-
+        <!-- Fine sezione social -->
     </main>
     <!-- Fine main -->
 
@@ -677,6 +701,7 @@
         <div class="container-fluid bg-info">
             <div class="container text-white padding_y_l">
                 <div class="row row-cols-1 row-cols-lg-2 align-items-center mb-4">
+                    <!-- Inizio sezione logo e lingua -->
                     <div class="col">
                         <a class="ps_footer_logo_margin_negative" href="#">
                             <img class="w-25" src="img/play_logo.svg" alt="Logo PlayStation">
@@ -693,7 +718,9 @@
                             <span class="ps-2">Country / Region: Italy</span>
                         </p>
                     </div>
+                    <!-- Fine sezione logo e lingua -->
 
+                    <!-- Inizio sezione link -->
                     <div class="col row row-cols-1 row-cols-md-3">
                         <div class="col">
                             <ul class="list-unstyled">
@@ -725,8 +752,10 @@
                             </ul>
                         </div>
                     </div>
+                    <!-- Fine sezione link -->
                 </div>
 
+                <!-- Inizio sezione copyright -->
                 <div class="row">
                     <div class="col-12 col-lg-6 me-auto">
                         <img class="w-25" src="img/sie-logo.svg" alt="Sony Interactive Entertainment">
@@ -737,6 +766,7 @@
                         </p>
                     </div>
                 </div>
+                <!-- Fine sezione copyright -->
             </div>
         </div>
     </footer>
