Inserito dropdown menu

--- a/index.html
+++ b/index.html
@@ -70,15 +70,20 @@
                             </a>
 
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-
                                 <li>
-                                    <hr class="dropdown-divider">
+                                    <img src="img/play-menu-ico.png" alt="">
+                                    <a class="dropdown-item" href="#">PS1</a>
                                 </li>
 
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li>
+                                    <img src="img/play-menu-ico.png" alt="">
+                                    <a class="dropdown-item" href="#">PS1</a>
+                                </li>
+
+                                <li>
+                                    <img src="img/play-menu-ico.png" alt="">
+                                    <a class="dropdown-item" href="#">PS1</a>
+                                </li>
                             </ul>
                         </li>
 
@@ -89,15 +94,20 @@
                             </a>
 
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-
                                 <li>
-                                    <hr class="dropdown-divider">
+                                    <img src="img/play-menu-ico.png" alt="">
+                                    <a class="dropdown-item" href="#">PS2</a>
                                 </li>
 
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li>
+                                    <img src="img/play-menu-ico.png" alt="">
+                                    <a class="dropdown-item" href="#">PS2</a>
+                                </li>
+
+                                <li>
+                                    <img src="img/play-menu-ico.png" alt="">
+                                    <a class="dropdown-item" href="#">PS2</a>
+                                </li>
                             </ul>
                         </li>
 
@@ -108,15 +118,20 @@
                             </a>
 
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-
                                 <li>
-                                    <hr class="dropdown-divider">
+                                    <img src="img/play-menu-ico.png" alt="">
+                                    <a class="dropdown-item" href="#">PS3</a>
                                 </li>
 
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li>
+                                    <img src="img/play-menu-ico.png" alt="">
+                                    <a class="dropdown-item" href="#">PS3</a>
+                                </li>
+
+                                <li>
+                                    <img src="img/play-menu-ico.png" alt="">
+                                    <a class="dropdown-item" href="#">PS3</a>
+                                </li>
                             </ul>
                         </li>
 
@@ -127,15 +142,20 @@
                             </a>
 
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-
                                 <li>
-                                    <hr class="dropdown-divider">
+                                    <img src="img/play-menu-ico.png" alt="">
+                                    <a class="dropdown-item" href="#">PS4</a>
                                 </li>
 
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li>
+                                    <img src="img/play-menu-ico.png" alt="">
+                                    <a class="dropdown-item" href="#">PS4</a>
+                                </li>
+
+                                <li>
+                                    <img src="img/play-menu-ico.png" alt="">
+                                    <a class="dropdown-item" href="#">PS4</a>
+                                </li>
                             </ul>
                         </li>
 
@@ -146,15 +166,20 @@
                             </a>
 
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-
                                 <li>
-                                    <hr class="dropdown-divider">
+                                    <img src="img/play-menu-ico.png" alt="">
+                                    <a class="dropdown-item" href="#">PS5</a>
                                 </li>
 
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li>
+                                    <img src="img/play-menu-ico.png" alt="">
+                                    <a class="dropdown-item" href="#">PS5</a>
+                                </li>
+
+                                <li>
+                                    <img src="img/play-menu-ico.png" alt="">
+                                    <a class="dropdown-item" href="#">PS5</a>
+                                </li>
                             </ul>
                         </li>
 
@@ -165,15 +190,20 @@
                             </a>
 
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-
                                 <li>
-                                    <hr class="dropdown-divider">
+                                    <img src="img/play-menu-ico.png" alt="">
+                                    <a class="dropdown-item" href="#">PS6</a>
                                 </li>
 
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li>
+                                    <img src="img/play-menu-ico.png" alt="">
+                                    <a class="dropdown-item" href="#">PS6</a>
+                                </li>
+
+                                <li>
+                                    <img src="img/play-menu-ico.png" alt="">
+                                    <a class="dropdown-item" href="#">PS6</a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
@@ -187,15 +217,20 @@
                                 </a>
 
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-
                                     <li>
-                                        <hr class="dropdown-divider">
+                                        <img src="img/play-menu-ico.png" alt="">
+                                        <a class="dropdown-item" href="#">PS7</a>
                                     </li>
-
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+    
+                                    <li>
+                                        <img src="img/play-menu-ico.png" alt="">
+                                        <a class="dropdown-item" href="#">PS7</a>
+                                    </li>
+    
+                                    <li>
+                                        <img src="img/play-menu-ico.png" alt="">
+                                        <a class="dropdown-item" href="#">PS7</a>
+                                    </li>
                                 </ul>
                             </li>
 
@@ -246,43 +281,43 @@
         <!-- Fine sezione Returnal -->
 
         <!-- Inizio sezione copertine dei giochi alternate -->
-        <div class="container">
+        <div class="container games_container">
             <div class="row row-cols-2 row-cols-sm-3 row-cols-lg-6 justify-content-between padding_y_s gy-3">
                 <div class="col">
-                    <div class="card rounded-3 card_active">
-                        <img class="card-image rounded-3" src="img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal">
+                    <div class="card rounded_16 card_active">
+                        <img class="card-image rounded_16" src="img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal">
                     </div>
                 </div>
 
                 <div class="col">
-                    <div class="card rounded-3">
-                        <img class="card-image rounded-3" src="img/ratchet-and-clank-rift-apart-keyart.jpg"
+                    <div class="card rounded_16">
+                        <img class="card-image rounded_16" src="img/ratchet-and-clank-rift-apart-keyart.jpg"
                             alt="Ratchet and Clank">
                     </div>
                 </div>
 
                 <div class="col">
-                    <div class="card rounded-3">
-                        <img class="card-image rounded-3" src="img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal">
+                    <div class="card rounded_16">
+                        <img class="card-image rounded_16" src="img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal">
                     </div>
                 </div>
 
                 <div class="col">
-                    <div class="card rounded-3">
-                        <img class="card-image rounded-3" src="img/ratchet-and-clank-rift-apart-keyart.jpg"
+                    <div class="card rounded_16">
+                        <img class="card-image rounded_16" src="img/ratchet-and-clank-rift-apart-keyart.jpg"
                             alt="Ratchet and Clank">
                     </div>
                 </div>
 
                 <div class="col">
-                    <div class="card rounded-3">
-                        <img class="card-image rounded-3" src="img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal">
+                    <div class="card rounded_16">
+                        <img class="card-image rounded_16" src="img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal">
                     </div>
                 </div>
 
                 <div class="col">
-                    <div class="card rounded-3">
-                        <img class="card-image rounded-3" src="img/ratchet-and-clank-rift-apart-keyart.jpg"
+                    <div class="card rounded_16">
+                        <img class="card-image rounded_16" src="img/ratchet-and-clank-rift-apart-keyart.jpg"
                             alt="Ratchet and Clank">
                     </div>
                 </div>
