--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
+                <!-- Inizio Navbar brand -->
                 <a class="navbar-brand" href="#">
                     <svg class="shared-nav-ps-logo" width="50px" height="50px" version="1.1"
                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -54,7 +55,9 @@
                         </g>
                     </svg>
                 </a>
+                <!-- Fine Navbar brand -->
 
+                <!-- Inizio hamburger menu -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -62,14 +65,15 @@
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <!-- Inizio menu di sinistra -->
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdown" role="button"
+                            <a class="nav-link dropdown-toggle text-black" href="#" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Giochi
                             </a>
 
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <ul class="dropdown-menu">
                                 <li>
                                     <img src="img/play-menu-ico.png" alt="">
                                     <a class="dropdown-item" href="#">PS1</a>
@@ -88,12 +92,12 @@
                         </li>
 
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdown" role="button"
+                            <a class="nav-link dropdown-toggle text-black" href="#" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Hardware
                             </a>
 
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <ul class="dropdown-menu">
                                 <li>
                                     <img src="img/play-menu-ico.png" alt="">
                                     <a class="dropdown-item" href="#">PS2</a>
@@ -112,12 +116,12 @@
                         </li>
 
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdown" role="button"
+                            <a class="nav-link dropdown-toggle text-black" href="#" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Servizi
                             </a>
 
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <ul class="dropdown-menu">
                                 <li>
                                     <img src="img/play-menu-ico.png" alt="">
                                     <a class="dropdown-item" href="#">PS3</a>
@@ -136,12 +140,12 @@
                         </li>
 
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdown" role="button"
+                            <a class="nav-link dropdown-toggle text-black" href="#" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Novità
                             </a>
 
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <ul class="dropdown-menu">
                                 <li>
                                     <img src="img/play-menu-ico.png" alt="">
                                     <a class="dropdown-item" href="#">PS4</a>
@@ -160,12 +164,12 @@
                         </li>
 
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdown" role="button"
+                            <a class="nav-link dropdown-toggle text-black" href="#" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Fai acquisti
                             </a>
 
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <ul class="dropdown-menu">
                                 <li>
                                     <img src="img/play-menu-ico.png" alt="">
                                     <a class="dropdown-item" href="#">PS5</a>
@@ -184,12 +188,12 @@
                         </li>
 
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdown" role="button"
+                            <a class="nav-link dropdown-toggle text-black" href="#" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Supporto
                             </a>
 
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <ul class="dropdown-menu">
                                 <li>
                                     <img src="img/play-menu-ico.png" alt="">
                                     <a class="dropdown-item" href="#">PS6</a>
@@ -207,16 +211,18 @@
                             </ul>
                         </li>
                     </ul>
+                    <!-- Fine menu di sinistra -->
 
+                    <!-- Inizio menu di destra -->
                     <div class="ms-auto">
                         <ul class="list-unstyled list-inline my-auto">
                             <li class="list-inline-item">
-                                <a class="nav-link dropdown-toggle text-black" href="#" id="navbarDropdown"
+                                <a class="nav-link dropdown-toggle text-black" href="#"
                                     role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     My PlayStation
                                 </a>
 
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <ul class="dropdown-menu">
                                     <li>
                                         <img src="img/play-menu-ico.png" alt="">
                                         <a class="dropdown-item" href="#">PS7</a>
@@ -253,7 +259,9 @@
                             </li>
                         </ul>
                     </div>
+                    <!-- Fine menu di destra -->
                 </div>
+                <!-- Fine hamburger menu -->
             </div>
         </nav>
     </header>
