Aggiunta del colore durante il focus dei nav-link e aggiunta una spaziatura

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
         <!-- Fine sezione PS5 info e immagine grande -->
 
         <!-- Inizio sezione PS5 tutti i prodotti -->
-        <div class="container playstation_items_container padding_y_s">
+        <div class="container playstation_items_container padding_y_s mb-5">
             <div class="row row-cols-3 row-cols-md-5 gy-3">
                 <div class="col">
                     <div class="card text-center border-0 card_active_bottom h-100">
