Altra correzione sulle spaziature nelle sectione psnow e ps+

--- a/index.html
+++ b/index.html
@@ -644,9 +644,9 @@
 
         <!-- Inizio sezione PlayStation Plus -->
         <div class="container-fluid bg-secondary">
-            <div class="container padding_y_s">
+            <div class="container">
                 <div class="row row-cols-1 row-cols-md-2 align-items-center">
-                    <div class="col text-white">
+                    <div class="col text-white padding_y_s">
                         <img class="w-50 mb-4" src="img/ps-plus-logo.png" alt="PS+ logo">
 
                         <p class="mb-4">Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili,
@@ -690,9 +690,9 @@
 
         <!-- Inizio sezione PlayStation Now -->
         <div class="container-fluid bg_dark_blue">
-            <div class="container padding_y_s">
+            <div class="container">
                 <div class="row row-cols-1 row-cols-md-2 align-items-center">
-                    <div class="col text-white">
+                    <div class="col text-white padding_y_s">
                         <img class="w-50 mb-4" src="img/ps-plus-logo.png" alt="PlayStation Now logo">
 
                         <p class="mb-4">Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2
